Fix z-index issue with flyout admin menu

--- a/css/black-studio-tinymce-widget.css
+++ b/css/black-studio-tinymce-widget.css
@@ -139,9 +139,9 @@ div[id*="black-studio-tinymce"] .mce-wp-fullscreen {
 	z-index: 500025;
 }
 
-/* Fix z-index to avoid the widget go behind the admin menu on small screen */
+/* Fix z-index to avoid the (open) widget go behind the admin menu on small screen */
 
-.widget[id*="black-studio-tinymce"] {
+.open.widget[id*="black-studio-tinymce"] {
 	z-index: 100000 !important;
 }
 
